CSS reset, favicons, SEO meta, hero component

--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="index, follow" />
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+
+  <title>Collective Radio</title>
+  <meta name="description" content="A multi-genre DJ mix podcast based in Vancouver, Canada." />
+  <meta name="keywords" content="Vancouver DJ mixes, Electronic music podcast, Dance music mixes, Weekly DJ podcast, Electronic dance music (EDM), DJ mix series, Vancouver electronic music, DJ mixes online, Live DJ sets, Dance music podcast, Electronic music mix, DJ mix recordings, Electronic music artists, Podcast for dance music lovers, Best DJ mixes, EDM podcast, Mixes across genres, Canadian DJ mixes, DJ culture Vancouver, Streaming electronic music mixes
+  " />
+
+  <link rel="canonical" href="https://www.collectiveradio.com/" />
+
+  <meta property="og:title" content="Collective Radio" />
+  <meta property="og:description" content="A multi-genre DJ mix podcast based in Vancouver, Canada." />
+  <meta property="og:image" content="https://www.collectiveradio.com/og-image.jpg" />
+  <meta property="og:url" content="https://www.collectiveradio.com/" />
+  <meta property="og:type" content="website" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
