Hero styling, introduced Player and Media components

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <meta property="og:image" content="https://www.collectiveradio.com/og-image.jpg" />
   <meta property="og:url" content="https://www.collectiveradio.com/" />
   <meta property="og:type" content="website" />
+
+  <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 </head>
 
 <body>
