Added simple analytics - Umami Cloud proxied through Cloudflare Workers

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   <meta property="og:url" content="https://www.collectiveradio.com/" />
   <meta property="og:type" content="website" />
 
+  <script defer src="https://an-proxy.matt-iakhno.workers.dev/"
+    data-website-id="6ad62f37-9743-4650-9728-f21afd19faa1"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
 </head>
 
