Service worker to enable better background memory management

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
   <meta name="robots" content="index, follow" />
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="manifest" href="/manifest.webmanifest">
 
   <title>Collective Radio</title>
   <meta name="description" content="A multi-genre DJ mix podcast based in Vancouver, Canada." />
@@ -23,6 +23,7 @@
   <meta property="og:image" content="https://www.collectiveradio.com/og-image.jpg" />
   <meta property="og:url" content="https://www.collectiveradio.com/" />
   <meta property="og:type" content="website" />
+  <meta name="theme-color" content="#0D0D0D" />
 
   <script defer src="https://an-proxy.matt-iakhno.workers.dev/"
     data-website-id="6ad62f37-9743-4650-9728-f21afd19faa1"></script>
