--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta property="og:image" content="https://www.collectiveradio.com/og-image.jpg" />
   <meta property="og:url" content="https://www.collectiveradio.com/" />
   <meta property="og:type" content="website" />
-  <meta name="theme-color" content="#0D0D0D" />
+  <meta name="theme-color" content="#fece02" />
 
   <script defer src="https://an-proxy.matt-iakhno.workers.dev/"
     data-website-id="6ad62f37-9743-4650-9728-f21afd19faa1"></script>
