Apple PWA HTML meta and theme update

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/manifest.webmanifest">
 
+  <!-- iOS PWA capability -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Collective Radio">
+
   <title>Collective Radio</title>
   <meta name="description" content="A multi-genre DJ mix podcast based in Vancouver, Canada." />
   <meta name="keywords" content="Vancouver DJ mixes, Electronic music podcast, Dance music mixes, Weekly DJ podcast, Electronic dance music (EDM), DJ mix series, Vancouver electronic music, DJ mixes online, Live DJ sets, Dance music podcast, Electronic music mix, DJ mix recordings, Electronic music artists, Podcast for dance music lovers, Best DJ mixes, EDM podcast, Mixes across genres, Canadian DJ mixes, DJ culture Vancouver, Streaming electronic music mixes
@@ -23,7 +28,7 @@
   <meta property="og:image" content="https://www.collectiveradio.com/og-image.jpg" />
   <meta property="og:url" content="https://www.collectiveradio.com/" />
   <meta property="og:type" content="website" />
-  <meta name="theme-color" content="#fece02" />
+  <meta name="theme-color" content="#000" />
 
   <script defer src="https://an-proxy.matt-iakhno.workers.dev/"
     data-website-id="6ad62f37-9743-4650-9728-f21afd19faa1"></script>
