Offload all dynamic og: meta to Helmet

--- a/index.html
+++ b/index.html
@@ -20,15 +20,9 @@
   <meta name="description" content="A multi-genre DJ mix podcast based in Vancouver, Canada." />
   <meta name="keywords" content="Vancouver DJ mixes, Electronic music podcast, Dance music mixes, Weekly DJ podcast, Electronic dance music (EDM), DJ mix series, Vancouver electronic music, DJ mixes online, Live DJ sets, Dance music podcast, Electronic music mix, DJ mix recordings, Electronic music artists, Podcast for dance music lovers, Best DJ mixes, EDM podcast, Mixes across genres, Canadian DJ mixes, DJ culture Vancouver, Streaming electronic music mixes
   " />
-
-  <link rel="canonical" href="https://www.collectiveradio.com/" />
-
-  <meta property="og:title" content="Collective Radio" />
-  <meta property="og:description" content="A multi-genre DJ mix podcast based in Vancouver, Canada." />
-  <meta property="og:image" content="https://www.collectiveradio.com/og-image.jpg" />
-  <meta property="og:url" content="https://www.collectiveradio.com/" />
-  <meta property="og:type" content="website" />
   <meta name="theme-color" content="#000" />
+
+  <!-- OG tags and canonical URL are managed dynamically by react-helmet-async -->
 
   <script defer src="https://an-proxy.matt-iakhno.workers.dev/"
     data-website-id="6ad62f37-9743-4650-9728-f21afd19faa1"></script>
